add a paragraph in html file

--- a/index.html
+++ b/index.html
@@ -8,6 +8,6 @@
     <link rel="stylesheet" href="style.css">
 </head>
 <body>
-    
+    <p>Lorem ipsum dolor sit amet, consectetur adipisicing elit. Quis, alias explicabo voluptatem veritatis molestias veniam delectus quas, excepturi natus corporis in voluptates. Commodi officiis velit, odio amet ex necessitatibus a?</p>
 </body>
 </html>
