--- a/index.html
+++ b/index.html
@@ -5,9 +5,13 @@
     <meta http-equiv="X-UA-Compatible" content="IE=edge">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>Document</title>
+   
+    <link rel="icon" type="image/x-icon" href="pic/logo.jpg">
     <link rel="stylesheet" href="style.css">
 </head>
 <body>
     <p>Lorem ipsum dolor sit amet, consectetur adipisicing elit. Quis, alias explicabo voluptatem veritatis molestias veniam delectus quas, excepturi natus corporis in voluptates. Commodi officiis velit, odio amet ex necessitatibus a?</p>
+    <iframe src="zahid.html" frameborder="0" width="400px" height="300px"></iframe>
+    <iframe width="560" height="315" src="https://www.youtube.com/embed/h35AhLov5jQ" title="YouTube video player" frameborder="0" allow="accelerometer; autoplay; clipboard-write; encrypted-media; gyroscope; picture-in-picture" allowfullscreen></iframe>
 </body>
 </html>
